--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="navbar">
     @if(token$ | async; as token) {
         <button mat-icon-button (click)="showSide()">
             <mat-icon>menu</mat-icon>
