--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -8,6 +8,8 @@
 
 <mat-menu #afterMenu="matMenu" xPosition="before">
   <button mat-menu-item>Registrar</button>
-  <button mat-menu-item>Ver todas</button>
+  <a routerLink="/list/all">
+    <button mat-menu-item >Ver todas</button>
+  </a>
 </mat-menu>
 }
