--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -1,7 +1,8 @@
 .side-div {
     width: 10%;
     height: 90vh;
-    background-color: #191c1c;
+    background-color: hsl(180, 7%, 29%);
+    position: absolute;
 }
 
 button {
