--- a/src/app/components/list/all-lists/all-lists.component.css
+++ b/src/app/components/list/all-lists/all-lists.component.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #191c1c;
     height: 95%;
 }
 
@@ -12,5 +11,34 @@
 }
 
 .list-container {
-    width: 400px;
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.list-container-p {
+    display: flex;
+    justify-content: space-around;
+    color: white;
+}
+
+.list-item {
+    display: flex;
+    justify-content: space-around;
+}
+
+@media (max-width:500px) {
+    .list-container {
+        width: 100vw;
+    }
+    
+    .list-item {
+        justify-content: space-between;
+    }
+
+    .list-container-p {
+        justify-content: space-around;
+    }
+    
 }
