feat: Adicionados campos para adicionar novas listas, e remover elementos da lista

--- a/src/app/components/list/all-lists/all-lists.component.html
+++ b/src/app/components/list/all-lists/all-lists.component.html
@@ -15,7 +15,7 @@
     <mat-hint  class="list-container">
         <mat-selection-list>
             <p class="list-container-p">
-                <label>Name</label>
+                <label>Nome</label>
                 <label>Quantidade</label>
             </p>
             @for (item of listControl.value?.items; track item.name) {
