feat: Adicionado component para registro de novos users

--- a/src/app/components/navbar/register-dialog/register-dialog.component.html
+++ b/src/app/components/navbar/register-dialog/register-dialog.component.html
@@ -2,6 +2,10 @@
     <h2 mat-dialog-title>Login</h2>
     <mat-dialog-content>
         <mat-form-field class="form-field">
+            <mat-label>Nome</mat-label>
+            <input matInput placeholder="Nome" required #name/>
+        </mat-form-field>
+        <mat-form-field class="form-field">
             <mat-label>Email</mat-label>
             <input matInput placeholder="test@example.com" required #email/>
         </mat-form-field>
@@ -16,6 +20,5 @@
     </mat-dialog-content>
 </div>
 <mat-dialog-actions align="center">
-    <button mat-button cdkFocusInitial (click)="login(email.value,password.value)">Login</button>
-    <button mat-button (click)="register()">Registro</button>
+    <button mat-button cdkFocusInitial (click)="register(name.value, email.value, password.value)">Registrar</button>
 </mat-dialog-actions>
